# lunarbase-pmm-math

./: .env.example  .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/minimal/: README.md
examples/minimal/go/: go  go.mod  go.sum  main.go
examples/minimal/rust/: Cargo.toml
examples/minimal/rust/src/: main.rs
examples/minimal/typescript/: index.ts  package-lock.json  package.json
examples/offchain-quoting/: README.md
examples/offchain-quoting/rust/: Cargo.toml
examples/offchain-quoting/rust-legacy/: Cargo.toml
examples/offchain-quoting/rust-legacy/src/: abi.rs  cache.rs  config.rs  main.rs  pool_state.rs  quoter.rs  seed.rs
examples/offchain-quoting/rust-legacy/src/handlers/: mod.rs  swap.rs
examples/offchain-quoting/rust-legacy/src/ws/: mod.rs  subscribe.rs  types.rs
examples/offchain-quoting/rust/src/: abi.rs  cache.rs  main.rs  pool_state.rs  quoter.rs  seed.rs
examples/offchain-quoting/rust/src/handlers/: mod.rs  swap.rs
examples/offchain-quoting/rust/src/ws/: mod.rs
math/go/: .golangci.yml  curve_pmm.go  curve_pmm_test.go  go.mod  go.sum  quote_bench_test.go  sqrt_price_math.go  uint256_ext.go  uint256_ext_test.go  vectors_test.go
math/go/testdata/: deterministic_vectors.jsonl
math/rust-node/lunarbase-pmm-math-node/: Cargo.toml  README.md  build.rs  index.d.ts  package-lock.json  package.json  test.ts  wrapper.js
math/rust-node/lunarbase-pmm-math-node/src/: lib.rs
math/rust-node/lunarbase-pmm-math-node/test/: quote.test.mjs
math/rust/lunarbase-pmm-math/: Cargo.toml  README.md  deterministic_vectors.jsonl
math/rust/lunarbase-pmm-math/benches/: quote.rs
math/rust/lunarbase-pmm-math/src/: curve_pmm.rs  fuzz_tests.rs  lib.rs  sqrt_price_math.rs  tests.rs  uint256.rs
