[package]
name = "lunarbase-pmm-math"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure Rust port of the LunarBase Curve PMM quoting math, bit-exact with the on-chain reference."
readme = "../../../README.md"
keywords = ["lunarbase", "pmm", "amm", "defi", "math"]
categories = ["mathematics", "no-std::no-alloc"]

[lib]
crate-type = ["rlib"]

[dependencies]
ruint = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "quote"
harness = false

[lints]
workspace = true
